Add jekyll-sass plugin
Using the original sass plugin meant that scss files were treated as pages by Jekyll, which created issues with listing and sorting pages for display

--- a/_config.yml
+++ b/_config.yml
@@ -39,3 +39,7 @@ kramdown:
     coderay_tab_width: 4
     coderay_bold_every: 10
     coderay_css: style
+
+sass:
+  syntax: scss        # scss|sass
+  style:  compressed  # nested|expanded|compact|compressed
