Turn off the Jekyll classifier
It doesn't look like the site uses it and the "matrix" module (or the
"classifier" gem -- it's hard to tell which) appears to be broken when running
on Heroku.

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ destination: ./_site
 plugins:     ./_plugins
 exclude: Procfile, Gemfile, Gemfile.lock, config.ru
 future:      true
-lsi:         true
+lsi:         false
 pygments:    false
 markdown:    kramdown
 permalink:   /:categories/:title/
