--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "assets/toolkit"]
-	path = assets/toolkit
+	path = servicemanual/assets/toolkit
 	url = https://github.com/alphagov/govuk_frontend_toolkit.git
