--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ baseurl:    /
 source:      ./
 destination: ./_site
 plugins:     ./_plugins
-exclude: Procfile, Gemfile, Gemfile.lock, config.ru
+exclude: Procfile, Gemfile, Gemfile.lock, config.ru, compile.sh, README.md, CONTRIBUTING.md
 future:      true
 lsi:         false
 pygments:    false
