--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,22 @@
 safe:        false
-auto:        false
-server:      false
-#server_port: 4000
-baseurl:    /
-#url: http://localhost:4000
+
+baseurl:     /
 
 source:      ./
 destination: ./_site
 plugins:     ./_plugins
-exclude: Procfile, Gemfile, Gemfile.lock, config.ru, compile.sh, README.md, CONTRIBUTING.md
 future:      true
 lsi:         false
 pygments:    false
 markdown:    kramdown
 permalink:   :category/:title/
+
+exclude:
+  - compile.sh
+  - CONTRIBUTING.md
+  - Gemfile
+  - Gemfile.lock
+  - README.md
 
 maruku:
   use_tex:    false
