Revert "Switch to using jekyll-assets to include assets"
This reverts commit 69c15fd4c42d51da3e69461790895cd9437965b9.

Conflicts:
	_config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,6 @@ kramdown:
     coderay_bold_every: 10
     coderay_css: style
 
-assets:
-  dirname: service-manual/assets
-  baseurl: /service-manual/assets/
-  gzip: false
+sass:
+  syntax: scss        # scss|sass
+  style:  compressed  # nested|expanded|compact|compressed
