--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "_assets/toolkit"]
-	path = _assets/toolkit
+[submodule "service-manual/assets/toolkit"]
+	path = service-manual/assets/toolkit
 	url = https://github.com/alphagov/govuk_frontend_toolkit.git
