Convert to use govuk_template
Use the liquid compiler from the govuk_template. This removes the code
which was previously copied from the output of static.

Moved over the styles which the old version got by 'magic' from static.
They were namely the footer, search input, feedback bar and breadcrumb
trail styling.

There are still some links out to images hosted on static which should
probably be moved to the govuk_frontend_toolkit. The shared styles could
probably also be moved there but minimum viable was just to copy paste.

--- a/_config.yml
+++ b/_config.yml
@@ -46,3 +46,5 @@ kramdown:
 sass:
   syntax: scss        # scss|sass
   style:  compressed  # nested|expanded|compact|compressed
+
+govuk_template_assets: '/service-manual/assets/govuk_template'
