Tidy up Jekyll exclusions
- lint.go is now in tools/
- Only exclude the root /tools directory

--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ exclude:
   - Gemfile
   - Gemfile.lock
   - Makefile
-  - lint.go
   - README.md
-  - tools
+  - /tools
+  - /tmp
   - /vendor
 
 maruku:
