Exclude toolkit documentation from Jekyll
There's no need to compile markdown files from the toolkit root directory
into the service manual.

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ exclude:
   - Gemfile.lock
   - Makefile
   - README.md
+  - /service-manual/assets/toolkit/*.md
   - /tools
   - /tmp
   - /vendor
