Add a Sinatra app

--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,14 @@ markdown:    kramdown
 permalink:   :category/:title/
 
 exclude:
+  - app.rb
   - compile.sh
+  - config.ru
   - CONTRIBUTING.md
   - Gemfile
   - Gemfile.lock
   - Makefile
+  - Procfile
   - README.md
   - /service-manual/assets/toolkit/*.md
   - /tools
