Heroku has a limit of 30 chars on the app name

--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "government-service-design-manual",
+  "name": "service-design-manual",
   "description": "Content for UK government Service Design Manual",
   "repository": "https://github.com/alphagov/government-service-design-manual",
   "website":"https://www.gov.uk/service-manual",
