CSS should be compiled as part of travis build
Toolkit usage was broken recently and this wasn’t picked up when the
change happened.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_script:
 script:
   - make lint links
   - bundle exec ruby ./tools/spellcheck/branch-spellcheck.rb $TRAVIS_BRANCH
+  - ./compile.sh
 branches:
   except:
     - master
