--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: ruby
+sudo: false
 rvm:
   - 2.1.2
 cache: bundler
+addons:
+  apt:
+    packages:
+    - aspell
+    - aspell-en
 before_install:
-  - sudo apt-get update
-  - sudo apt-get install aspell aspell-en golang
   - export GOPATH=$HOME/gopath
 before_script:
   - git fetch origin
